--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="small-container">
-            <input type="text" name="" id="reveal">
-            <button class="add-btn" onclick="showBtn()">Add</button>
+            <div>
+                <input type="text" name="" id="reveal">
+                <button class="add-btn" onclick="showBtn()">Add</button>
+            </div>
             <div id="list">
             </div>
-            
+
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
