added some another condition to check if what you want to push to the array does not exist in the array already

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="container">
         <div class="small-container">
             <div>
-                <input type="text" name="" id="reveal">
-                <button class="add-btn" onclick="showBtn()">Add</button>
+                <input type="text" name="" id="input">
+                <button class="add-btn" onclick="addItems()">Add</button>
             </div>
-            <div id="list">
+            <div id="display">
             </div>
 
         </div>
