I added a Todo List text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <div class="container">
         <div class="small-container">
+            <div class="todo-list">
+                Todo List
+            </div>
             <div>
                 <input type="text" name="" id="input">
                 <button class="add-btn" onclick="addItems()">Add</button>
