I just added a new div that has another input and button for edit and also added a status message to know if the input was added to the Todo list successfully or not

--- a/index.html
+++ b/index.html
@@ -16,9 +16,22 @@
                 Todo List
             </div>
             <div>
-                <input type="text" name="" id="input">
-                <button class="add-btn" onclick="addItems()">Add</button>
+                <div>
+                    <input type="text" name="" id="input">
+                    <button class="add-btn" onclick="addItems()">Add</button>
+                </div>
+                <div id="showStatusMessage"></div>
             </div>
+            
+
+            <div class="edit-container">
+                <p>Edit</p>
+                <div>
+                    <input type="text" name="" id="input-edit">
+                    <button class="done-btn" onclick="edit()">Done</button>
+                </div>
+            </div>
+
             <div id="display">
             </div>
 
