--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="todo-list">
                 Todo List
             </div>
-            <div>
+            <div id="input-container">
                 <div>
                     <input type="text" name="" id="input">
                     <button class="add-btn" onclick="addItems()">Add</button>
@@ -24,11 +24,11 @@
             </div>
             
 
-            <div class="edit-container">
+            <div id="edit-container">
                 <p>Edit</p>
                 <div>
                     <input type="text" name="" id="input-edit">
-                    <button class="done-btn" onclick="edit()">Done</button>
+                    <button class="done-btn" onclick="done()">Done</button>
                 </div>
             </div>
 
