I was able to make all my todo list to be showing on the screen even on reload of the browser, I also did some styling

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
                     <button class="done-btn" onclick="done()">Done</button>
                 </div>
             </div>
-
-            <div id="display">
-            </div>
+            <div class="overf">
+               
+    
+                <div id="display">
+                </div>
+            </div>            
 
         </div>
     </div>
